k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
  labels:
    app: file-service
spec:
  ports:
  - port: 7000
    targetPort: 7000
    name: http
  selector:
    app: file-service
  type: ClusterIP
